--- a/interactiveScene/index.html
+++ b/interactiveScene/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>
+      Type a word in the box
+    </title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="js/p5.min.js"></script>
     <!-- <script src="js/p5.dom.min.js"></script> -->
     <!-- <script src="js/p5.sound.min.js"></script> -->
     <script src="sketch.js"></script>
+    <script src = "p5.js" ></script>
   </head>
   <body>
+    <p>
+        <font size="+2"><Center>Type a word in the box</Center></font>
+        <p style="position: absolute; bottom: 0; left: 0; right: 0; width 100%; text-align: center;">Type a word in the box</p>
   </body>
+
+
 </html>
