editted more thingsssssssss

--- a/interactiveScene/index.html
+++ b/interactiveScene/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Type a word in the box
+      Smash your keyboard
     </title>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
@@ -14,8 +14,6 @@
   </head>
   <body>
     <p>
-        <font size="+2"><Center>Type a word in the box</Center></font>
-        <p style="position: absolute; bottom: 0; left: 0; right: 0; width 100%; text-align: center;">Type a word in the box</p>
   </body>
 
 
