--- a/mineSweeper/index.html
+++ b/mineSweeper/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>Minesweeper</title>
+    <body>Minesweeper
+    <p>Don't click the mines</p></body>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> body {
+      background-color: lightblue;
+      padding: 0;
+      margin: 0;} </style>
     <script src="js/p5.min.js"></script>
     <!-- <script src="js/p5.dom.min.js"></script> -->
     <!-- <script src="js/p5.sound.min.js"></script> -->
